# pathman

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README.md  README.rst  conftest.py  docker-compose.yml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
docs/: Makefile  api.rst  conf.py  dev.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
pathman/: __init__.py  abstract.py  base.py  bf.py  copy.py  local.py  path.py  pathlike.py  s3.py  utils.py
pathman/_impl/: __init__.py  blackfynn.py  s3.py
tests/: conftest.py  test_bf.py  test_copy.py  test_local.py  test_path.py  test_s3.py  test_utils.py
