[bumpversion]
current_version = 0.2.2
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize =
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}


[bumpversion:file:setup.py]
search = "{current_version}"
replace = "{new_version}"

[bumpversion:file:pathman/__init__.py]
search = "{current_version}"
replace = "{new_version}"


[flake8]
max-line-length = 100

exclude = .git, setup.py docs/* build/* pathman/__init__.py pathman/_impl/__init__.py
ignore =
       # whitespace before :
       E203

[tool:pytest]
addopts = --strict --cov=pathman --cov-report=term --cov-report=html
markers =
    remote
    integration

[coverage:run]
source = pathman

[metadata]
description-file = README.rst
license_file = LICENSE

[bdist_wheel]
universal = 1
